--- a/publicacionesPanel - copia/style/css/style.css
+++ b/publicacionesPanel - copia/style/css/style.css
@@ -73,27 +73,27 @@
         font-weight: bolder; }
       #AGGPublic .modal-dialog .modal-header .containerForm .headerForm p, #MODIPublic .modal-dialog .modal-header .containerForm .headerForm p {
         color: #555555; }
-    #AGGPublic .modal-dialog .modal-header .containerForm form, #MODIPublic .modal-dialog .modal-header .containerForm form {
+    #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer {
       position: relative;
       padding: 2rem;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       text-align: center; }
-      #AGGPublic .modal-dialog .modal-header .containerForm form .filas, #MODIPublic .modal-dialog .modal-header .containerForm form .filas {
+      #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         padding: 1rem 0;
         text-align: left; }
-        #AGGPublic .modal-dialog .modal-header .containerForm form .filas:first-child, #MODIPublic .modal-dialog .modal-header .containerForm form .filas:first-child {
+        #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas:first-child, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas:first-child {
           padding-top: 0; }
-        #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group {
+        #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group {
           -webkit-box-sizing: border-box;
           box-sizing: border-box; }
-          #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group:first-child, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group:first-child {
+          #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group:first-child, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group:first-child {
             padding-right: 1rem; }
-          #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group:last-child, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group:last-child {
+          #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group:last-child, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group:last-child {
             padding-left: 1rem; }
-          #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group label, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group label {
+          #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group label, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group label {
             width: 100%;
             margin-bottom: 0.5rem;
             display: inline-block;
@@ -101,9 +101,9 @@
             color: #353232;
             font-weight: bold;
             font-size: 14px; }
-            #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group label span, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group label span {
+            #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group label span, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group label span {
               color: #2c3e50; }
-          #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group input, #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group input, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea {
+          #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea {
             border: none;
             background: none;
             background-color: white;
@@ -120,13 +120,13 @@
             -webkit-transition: border 200ms linear;
             -o-transition: border 200ms linear;
             transition: border 200ms linear; }
-            #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group input.error, #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea.error, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group input.error, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea.error {
+            #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input.error, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea.error, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input.error, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea.error {
               border: 2px #e74c3c solid; }
-            #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group input.success, #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea.success, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group input.success, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea.success {
+            #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input.success, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea.success, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input.success, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea.success {
               border: 2px #228b22 solid; }
-            #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group input:focus, #AGGPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea:focus, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group input:focus, #MODIPublic .modal-dialog .modal-header .containerForm form .filas .form-group textarea:focus {
+            #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input:focus, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea:focus, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group input:focus, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .filas .form-group textarea:focus {
               outline: none; }
-      #AGGPublic .modal-dialog .modal-header .containerForm form .btnAGG, #AGGPublic .modal-dialog .modal-header .containerForm form .btnClose, #AGGPublic .modal-dialog .modal-header .containerForm form .btnMODI, #MODIPublic .modal-dialog .modal-header .containerForm form .btnAGG, #MODIPublic .modal-dialog .modal-header .containerForm form .btnClose, #MODIPublic .modal-dialog .modal-header .containerForm form .btnMODI {
+      #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI {
         padding: 1rem 1.5rem;
         background: none;
         border: none;
@@ -142,14 +142,14 @@
         -webkit-transition: all 400ms linear;
         -o-transition: all 400ms linear;
         transition: all 400ms linear; }
-        #AGGPublic .modal-dialog .modal-header .containerForm form .btnAGG:hover, #AGGPublic .modal-dialog .modal-header .containerForm form .btnClose:hover, #AGGPublic .modal-dialog .modal-header .containerForm form .btnMODI:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnAGG:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnClose:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnMODI:hover {
+        #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG:hover, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose:hover, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI:hover {
           background-color: #01294e; }
-        #AGGPublic .modal-dialog .modal-header .containerForm form .btnAGG.disabled, #AGGPublic .modal-dialog .modal-header .containerForm form .btnClose.disabled, #AGGPublic .modal-dialog .modal-header .containerForm form .btnMODI.disabled, #MODIPublic .modal-dialog .modal-header .containerForm form .btnAGG.disabled, #MODIPublic .modal-dialog .modal-header .containerForm form .btnClose.disabled, #MODIPublic .modal-dialog .modal-header .containerForm form .btnMODI.disabled {
+        #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG.disabled, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose.disabled, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI.disabled, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG.disabled, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose.disabled, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI.disabled {
           cursor: not-allowed;
           background-color: #1f91fc; }
-          #AGGPublic .modal-dialog .modal-header .containerForm form .btnAGG.disabled:hover, #AGGPublic .modal-dialog .modal-header .containerForm form .btnClose.disabled:hover, #AGGPublic .modal-dialog .modal-header .containerForm form .btnMODI.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnAGG.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnClose.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm form .btnMODI.disabled:hover {
+          #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG.disabled:hover, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose.disabled:hover, #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnAGG.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose.disabled:hover, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnMODI.disabled:hover {
             background-color: #1f91fc; }
-      #AGGPublic .modal-dialog .modal-header .containerForm form .btnClose, #MODIPublic .modal-dialog .modal-header .containerForm form .btnClose {
+      #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose {
         background: #7c7b7b; }
 
 /*estilo de la vista de la tabla de administrador de las publicaciones */
