--- a/publicacionesPanel - copia/style/scss/_modal.scss
+++ b/publicacionesPanel - copia/style/scss/_modal.scss
@@ -102,7 +102,7 @@
 								color: #555555;
 							}
 						}		
-						form {
+						.formularioContainer {
 							position: relative;
 							padding: 2rem;
 							box-sizing: border-box;
