--- a/publicacionesPanel - copia/style/scss/style.scss
+++ b/publicacionesPanel - copia/style/scss/style.scss
@@ -1,7 +1,8 @@
 $primary: #024380;
 $secondary: #2c3e50;
-$success: #228b22;
+$success: hsl(120, 61%, 34%);
 $error: #e74c3c;
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 // @import '_navBar.scss';
 @import '_modal.scss';
@@ -22,27 +23,7 @@ h1 {
   margin: 60px 0 30px 0;
   color: rgb(0, 0, 0);
 }
-// button {
-//   background-color: #024380;
-//   position: relative;
-//   color: #fff;
-//   border: none;
-//   padding: 1.25em 2em;
-//   font-size: 0.75em;
-//   letter-spacing: 1px;
-//   text-transform: uppercase;
-//   cursor: pointer;
-//   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-//   transition: background 0.25s cubic-bezier(0.55, 0, 0.1, 1);
-// }
 
-// button:hover {
-//   background: #0c4ddb;
-// }
 
-// button:focus {
-//   outline: none;
-// }
-// 
 
 
