--- a/CRUD/style/css/style.css
+++ b/CRUD/style/css/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed");
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url("https://fonts.googleapis.com/css?family=Montserrat:700|Roboto|Roboto+Condensed");
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @media only screen and (max-width: 600px) {
   h1 {
     font-size: 1.5rem; }
@@ -156,48 +156,236 @@
       #AGGPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose, #MODIPublic .modal-dialog .modal-header .containerForm .formularioContainer .btnClose {
         background: #7c7b7b; }
 
-.encabezado {
-  /*Button Two*/ }
-  .encabezado .button-two {
-    text-align: center;
-    cursor: pointer;
-    font-size: 24px; }
-  .encabezado .button-two {
-    border-radius: 4px;
-    background-color: #024380;
-    border: none;
-    padding: 20px;
-    -webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-    color: #fff; }
-  .encabezado .button-two span {
+::-moz-selection {
+  background: #024380;
+  color: white;
+  text-shadow: none; }
+
+::selection {
+  background: #024380;
+  color: white;
+  text-shadow: none; }
+
+::-webkit-selection {
+  background: #024380;
+  color: white;
+  text-shadow: none; }
+
+.box-btnNewPublic .button-two {
+  display: inline-block !important;
+  text-align: center;
+  cursor: pointer;
+  font-size: 24px;
+  border-radius: 4px;
+  background-color: #024380;
+  border: none;
+  padding: 20px;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  color: #fff; }
+  .box-btnNewPublic .button-two span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s; }
-  .encabezado .button-two span:after {
-    content: '»';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s; }
-  .encabezado .button-two:hover span {
-    padding-right: 25px; }
-  .encabezado .button-two:hover span:after {
+    .box-btnNewPublic .button-two span:after {
+      content: '»';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
+
+.box-btnNewPublic .button-two:hover span {
+  padding-right: 25px; }
+  .box-btnNewPublic .button-two:hover span:after {
     opacity: 1;
     right: 0; }
+
+.SearchPublic {
+  display: inline-block !important; }
+  .SearchPublic .field-container {
+    float: right !important;
+    position: relative;
+    padding: 0;
+    border: 0;
+    width: 330px;
+    height: 45px; }
+    .SearchPublic .field-container .field {
+      border: 0;
+      width: 400px;
+      height: 100%;
+      padding: 10px 20px;
+      background: white;
+      border-radius: 3px;
+      -webkit-box-shadow: 0px 8px 15px rgba(75, 72, 72, 0.1);
+      box-shadow: 0px 8px 15px rgba(75, 72, 72, 0.1);
+      -webkit-box-shadow: 0px 12px 15px rgba(75, 72, 72, 0.1);
+      box-shadow: 0px 12px 15px rgba(75, 72, 72, 0.1);
+      -webkit-transition: all 0.4s ease;
+      -o-transition: all 0.4s ease;
+      transition: all 0.4s ease; }
+      .SearchPublic .field-container .field:focus {
+        outline: none;
+        -webkit-box-shadow: 0px 9px 20px rgba(75, 72, 72, 0.3);
+        box-shadow: 0px 9px 20px rgba(75, 72, 72, 0.3); }
+        .SearchPublic .field-container .field:focus + .icons-container .icon-close {
+          opacity: 1;
+          -webkit-transform: translateX(0);
+          -ms-transform: translateX(0);
+          transform: translateX(0); }
+        .SearchPublic .field-container .field:focus + .icons-container .icon-search {
+          opacity: 0;
+          -webkit-transform: translateX(200%);
+          -ms-transform: translateX(200%);
+          transform: translateX(200%); }
+    .SearchPublic .field-container .icons-container {
+      position: absolute;
+      top: 11px;
+      right: -25px;
+      width: 35px;
+      height: 35px;
+      overflow: hidden; }
+      .SearchPublic .field-container .icons-container .icon-search {
+        position: relative;
+        top: 5px;
+        left: 8px;
+        width: 50%;
+        height: 50%;
+        opacity: 1;
+        border-radius: 50%;
+        border: 3px solid #a6bdd3;
+        -webkit-transition: opacity 0.25s ease, -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        -o-transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1), -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1); }
+        .SearchPublic .field-container .icons-container .icon-search:after {
+          content: "";
+          position: absolute;
+          bottom: -9px;
+          right: -2px;
+          width: 4px;
+          border-radius: 3px;
+          -webkit-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+          height: 10px;
+          background-color: #a6bdd3; }
+      .SearchPublic .field-container .icons-container .icon-close {
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 75%;
+        height: 75%;
+        opacity: 0;
+        cursor: pointer;
+        -webkit-transform: translateX(-200%);
+        -ms-transform: translateX(-200%);
+        transform: translateX(-200%);
+        border-radius: 50%;
+        -webkit-transition: opacity 0.25s ease, -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        -o-transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1);
+        transition: opacity 0.25s ease, transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1), -webkit-transform 0.43s cubic-bezier(0.694, 0.048, 0.335, 1); }
+        .SearchPublic .field-container .icons-container .icon-close:before {
+          content: "";
+          border-radius: 50%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          border: 2px solid transparent;
+          border-top-color: #024380;
+          border-left-color: #024380;
+          border-bottom-color: #024380;
+          -webkit-transition: opacity 0.2s ease;
+          -o-transition: opacity 0.2s ease;
+          transition: opacity 0.2s ease; }
+        .SearchPublic .field-container .icons-container .icon-close .x-up {
+          position: relative;
+          width: 100%;
+          height: 50%; }
+          .SearchPublic .field-container .icons-container .icon-close .x-up:before {
+            content: "";
+            position: absolute;
+            bottom: 2px;
+            left: 3px;
+            width: 50%;
+            height: 2px;
+            background-color: #024380;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg); }
+          .SearchPublic .field-container .icons-container .icon-close .x-up:after {
+            content: "";
+            position: absolute;
+            bottom: 2px;
+            right: 0px;
+            width: 50%;
+            height: 2px;
+            background-color: #024380;
+            -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+        .SearchPublic .field-container .icons-container .icon-close .x-down {
+          position: relative;
+          width: 100%;
+          height: 50%; }
+          .SearchPublic .field-container .icons-container .icon-close .x-down:before {
+            content: "";
+            position: absolute;
+            top: 5px;
+            left: 4px;
+            width: 50%;
+            height: 2px;
+            background-color: #024380;
+            -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+          .SearchPublic .field-container .icons-container .icon-close .x-down:after {
+            content: "";
+            position: absolute;
+            top: 5px;
+            right: 1px;
+            width: 50%;
+            height: 2px;
+            background-color: #024380;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg); }
+        .is-type .SearchPublic .field-container .icons-container .icon-close:before {
+          opacity: 1;
+          -webkit-animation: spin 0.85s infinite;
+          animation: spin 0.85s infinite; }
+        .is-type .SearchPublic .field-container .icons-container .icon-close .x-up:before, .is-type .SearchPublic .field-container .icons-container .icon-close .x-up:after {
+          -webkit-animation: color-1 0.85s infinite;
+          animation: color-1 0.85s infinite; }
+        .is-type .SearchPublic .field-container .icons-container .icon-close .x-up:after {
+          -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+        .is-type .SearchPublic .field-container .icons-container .icon-close .x-down:before, .is-type .SearchPublic .field-container .icons-container .icon-close .x-down:after {
+          -webkit-animation: color-1 0.85s infinite;
+          animation: color-1 0.85s infinite; }
+        .is-type .SearchPublic .field-container .icons-container .icon-close .x-down:before {
+          -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+        .is-type .SearchPublic .field-container .icons-container .icon-close .x-down:after {
+          -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
 
 /*estilo de la vista de la tabla de administrador de las publicaciones */
 table {
   border: 1px solid #ccc;
   border-collapse: collapse;
-  margin: 0;
   padding: 0;
   width: 100%;
   table-layout: fixed;
